clusters/calcifer-cloud/apps/home-assistant/endpointslice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: home-assistant-home
  namespace: home-assistant
  labels:
    kubernetes.io/service-name: home-assistant-home
addressType: IPv4
ports:
  - name: https
    protocol: TCP
    port: 443
endpoints:
  - addresses:
      - 172.31.255.2
    conditions:
      ready: true
