clusters/calcifer-cloud/apps/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-home
  namespace: home-assistant
spec:
  ports:
    - name: https
      port: 443
      targetPort: 443
